--- a/modules/cms/ui/themes/default/style/openrat.css
+++ b/modules/cms/ui/themes/default/style/openrat.css
@@ -1267,49 +1267,50 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 }
 .or-workbench-navigation {
 	width: 30em;
+}
+.or-workbench-navigation-container {
+	width: 30em;
+	position: fixed;
+	z-index: 1;
+	opacity: 0.9;
 	transition: width 0.15s ease-in-out;
 	height: 100%;
 	padding: 0.7em;
 	overflow-x: hidden;
-	opacity: 0.9;
 }
 .or-workbench-navigation--is-small {
 	width: 6em;
-	overflow-y: hidden;
-	opacity: 0.2;
 }
-.or-workbench-navigation--is-small ~ .or-workbench-workplace {
-	margin-left: 0;
+.or-workbench-navigation--is-small .or-workbench-navigation-container {
+	opacity: 0.2;
+	width: 6em;
+	overflow-y: hidden;
+}
+.or-workbench-navigation--is-small .or-workbench-navigation-container:hover {
+	overflow-y: auto;
+	width: 33%;
+	opacity: 0.9;
+}
+.or-workbench-navigation--is-small .or-workbench-navigation-container:hover .or-navtree-text {
+	opacity: 1;
 }
 .or-workbench-navigation--is-small .or-navtree-text {
 	opacity: 0;
 	transition: opacity ease-in-out;
 }
-.or-workbench-navigation--is-small:hover {
-	overflow-y: auto;
-	width: 33%;
-	z-index: 1;
-	opacity: 0.9;
-	position: fixed;
-}
-.or-workbench-navigation--is-small:hover .or-navtree-text {
-	opacity: 1;
-}
 @media only screen and (max-width: 55rem) {
 	.or-workbench-navigation {
 		width: 0;
+	}
+	.or-workbench-navigation .or-workbench-navigation-container {
+		width: 0;
 		padding: 0;
 	}
-}
-@media only screen and (max-width: 55rem) {
-	.or-workbench-navigation--is-open {
+	.or-workbench-navigation--is-open .or-workbench-navigation-container {
 		padding: 0.8em;
-		position: fixed;
 		overflow-y: auto;
 		width: 90%;
-		border-right: 1px solid;
 		opacity: 0.98;
-		z-index: 1;
 	}
 }
 @media only screen and (min-width: 75rem) {
@@ -1367,7 +1368,7 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 		font-size: 1em;
 	}
 }
-/*# sourceMappingURL=data:application/json,%7B%22version%22%3A3%2C%22sources%22%3A%5B%22mnt%5C%2Fdata%5C%2Fdankert%5C%2FEntwicklung%5C%2FProjekte%5C%2Fopenrat-cms%5C%2Fmodules%5C%2Fcms%5C%2Fui%5C%2Fthemes%5C%2Fdefault%5C%2Fstyle%5C%2Fopenrat-workbench.less%22%5D%2C%22names%22%3A%5B%5D%2C%22mappings%22%3A%22%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3BAAoCA%3B%3B%3BAAEI%2CGAAC%3BCAEG%3BCACA%3BCACA%3BCACA%3B%3B%3B%3BAAQA%2CGAbH%2CUAaI%3BCACG%3BCACA%3BCACA%3BCACA%3BCACA%3B%3BAALJ%2CGAbH%2CUAaI%2CMAOG%2CcAEI%3BCACI%3B%3BAAOJ%3BCAAA%2CGA9BX%2CUAaI%2CMAOG%2CcAMI%2CKAAI%3BCAIJ%2CGA9BX%2CUAaI%2CMAOG%2CcAMgB%3BEAEJ%3B%3B%3BAAMhB%2CGAlCH%2CUAkCI%3BCACG%3B%3BCAGA%3BCACA%3B%3B%3B%3B%3B%3BAALJ%2CGAlCH%2CUAkCI%2CKAgBK%3BCAGE%3BCACA%3B%3BAASR%2CGA%5C%2FDH%2CUA%2BDI%3BCAGG%2CyCAAA%3BCAMA%2C6BAAA%3BCACA%3BCACA%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3BAAmBJ%2CGA7FH%2CUA6FI%3BCACG%3B%3BAAKA%3BCAAA%2CGAnGP%2CUA6FI%3BEAGO%3B%3B%3BAAHR%2CGA7FH%2CUA6FI%2CQAUG%3BCACI%3B%3BAAIJ%2CGA5GP%2CUA6FI%2CQAeI%2CcACG%3BCACI%3B%3BAAiBZ%2CGA%5C%2FHH%2CUA%2BHI%3BCACG%3B%3BAAGJ%2CGAnIH%2CUAmII%3BCACG%3B%3BAAGJ%2CGAvIH%2CUAuII%2CqBACG%3BCACI%3B%3BAAFR%2CGAvIH%2CUAuII%2CqBAKG%3BCACI%3B%3BAAIR%2CGAjJH%2CUAiJI%3BCAEG%3BCACA%2CmCAAA%3BCAEA%3BCACA%3BCACA%3BCACA%3B%3BAAEA%2CGA3JP%2CUAiJI%2CWAUI%3BCACG%3BCACA%3BCAKA%3B%3BAAJA%2CGA9JX%2CUAiJI%2CWAUI%2CUAGO%3BCACA%3B%3BAAJR%2CGA3JP%2CUAiJI%2CWAUI%2CUASG%3BCACI%3BCACA%2C%2BBAAA%3B%3BAAIJ%2CGA1KX%2CUAiJI%2CWAUI%2CUAeI%3BCACG%3BCACA%3BCACA%3BCACA%3BCACA%3B%3BAALJ%2CGA1KX%2CUAiJI%2CWAUI%2CUAeI%2CMAOG%3BCACI%3B%3BAAWZ%3BCAAA%2CGA7LP%2CUAiJI%3BEAwCO%3BEACA%3B%3B%3BAAcJ%3BCAAA%2CGAxMP%2CUAiJI%2CWA4CI%3BEAGO%3BEACA%3BEACA%3BEACA%3BEACA%2CuBAAA%3BEACA%3BEACA%3B%3B%3BAASR%3BCAAA%2CGA%5C%2FMP%2CUAiJI%3BEA0DO%3B%3B%3BAA1DR%2CGAjJH%2CUAiJI%2CWA8DG%3BCACI%3B%3BAAOZ%2CGAAC%3BCACG%3B%3BAAKJ%3BCAAA%2CGANC%3BEAGO%3B%3B%3BAASR%3BCAAA%2CGALC%3BEAGO%3B%3B%3BAAIR%2CGAAC%3BCACG%3B%3BAAIJ%3BCAAA%2CGALC%3BEAGO%3B%3B%3BAAIR%2CGAAC%3BCACG%3B%3BAAIJ%3BCAAA%2CGALC%3BEAGO%3B%3B%3BAAcJ%3BCAAA%2CGAVH%2CaAAa%2CUAMV%3BEAEQ%3B%3B%3BAAOZ%2CGAAC%3BCAEG%2C%2BCAAA%3BCACA%2CgCAAA%3BCACA%3BCACA%3BCACA%3BCACA%3B%3BAAkBR%3BCALI%3BEACI%22%7D */
+/*# sourceMappingURL=data:application/json,%7B%22version%22%3A3%2C%22sources%22%3A%5B%22mnt%5C%2Fdata%5C%2Fdankert%5C%2FEntwicklung%5C%2FProjekte%5C%2Fopenrat-cms%5C%2Fmodules%5C%2Fcms%5C%2Fui%5C%2Fthemes%5C%2Fdefault%5C%2Fstyle%5C%2Fopenrat-workbench.less%22%5D%2C%22names%22%3A%5B%5D%2C%22mappings%22%3A%22%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3BAAoCA%3B%3B%3BAAEI%2CGAAC%3BCAEG%3BCACA%3BCACA%3BCACA%3B%3B%3B%3BAAQA%2CGAbH%2CUAaI%3BCACG%3BCACA%3BCACA%3BCACA%3BCACA%3B%3BAALJ%2CGAbH%2CUAaI%2CMAOG%2CcAEI%3BCACI%3B%3BAAOJ%3BCAAA%2CGA9BX%2CUAaI%2CMAOG%2CcAMI%2CKAAI%3BCAIJ%2CGA9BX%2CUAaI%2CMAOG%2CcAMgB%3BEAEJ%3B%3B%3BAAMhB%2CGAlCH%2CUAkCI%3BCACG%3B%3BCAGA%3BCACA%3B%3B%3B%3B%3B%3BAALJ%2CGAlCH%2CUAkCI%2CKAgBK%3BCAGE%3BCACA%3B%3BAASR%2CGA%5C%2FDH%2CUA%2BDI%3BCAGG%2CyCAAA%3BCAMA%2C6BAAA%3BCACA%3BCACA%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3BAAmBJ%2CGA7FH%2CUA6FI%3BCACG%3B%3BAAKA%3BCAAA%2CGAnGP%2CUA6FI%3BEAGO%3B%3B%3BAAHR%2CGA7FH%2CUA6FI%2CQAUG%3BCACI%3B%3BAAIJ%2CGA5GP%2CUA6FI%2CQAeI%2CcACG%3BCACI%3B%3BAAiBZ%2CGA%5C%2FHH%2CUA%2BHI%3BCACG%3B%3BAAGJ%2CGAnIH%2CUAmII%3BCACG%3B%3BAAGJ%2CGAvIH%2CUAuII%2CqBACG%3BCACI%3B%3BAAFR%2CGAvIH%2CUAuII%2CqBAKG%3BCACI%3B%3BAAIR%2CGAjJH%2CUAiJI%3BCAiBG%3B%3BAAdA%2CGApJP%2CUAiJI%2CWAGI%3BCAEG%3BCAEA%3BCACA%3BCACA%3BCACA%2CmCAAA%3BCACA%3BCACA%3BCACA%3B%3BAAMJ%2CGApKP%2CUAiJI%2CWAmBI%3BCACG%3B%3BAADJ%2CGApKP%2CUAiJI%2CWAmBI%2CUAOG%3BCACI%3BCACA%3BCACA%3B%3BAAEA%2CGAhLf%2CUAiJI%2CWAmBI%2CUAOG%2CmCAKK%3BCACG%3BCACA%3BCACA%3B%3BAAHJ%2CGAhLf%2CUAiJI%2CWAmBI%2CUAOG%2CmCAKK%2CMAKG%3BCACI%3B%3BAAlBhB%2CGApKP%2CUAiJI%2CWAmBI%2CUAuBG%3BCACI%3BCACA%2C%2BBAAA%3B%3BAA4BR%3BCAAA%2CGAzNP%2CUAiJI%3BEAkDO%3B%3BCAsBJ%2CGAzNP%2CUAiJI%2CWAoDO%3BEAEI%3BEACA%3B%3BCAGJ%2CGA3MX%2CUAiJI%2CWA0DQ%2CSAEG%3BEAEI%3BEACA%3BEACA%3BEAEA%3B%3B%3BAAWZ%3BCAAA%2CGA9NP%2CUAiJI%3BEAyEO%3B%3B%3BAAzER%2CGAjJH%2CUAiJI%2CWA6EG%3BCACI%3B%3BAAOZ%2CGAAC%3BCACG%3B%3BAAKJ%3BCAAA%2CGANC%3BEAGO%3B%3B%3BAASR%3BCAAA%2CGALC%3BEAGO%3B%3B%3BAAIR%2CGAAC%3BCACG%3B%3BAAIJ%3BCAAA%2CGALC%3BEAGO%3B%3B%3BAAIR%2CGAAC%3BCACG%3B%3BAAIJ%3BCAAA%2CGALC%3BEAGO%3B%3B%3BAAcJ%3BCAAA%2CGAVH%2CaAAa%2CUAMV%3BEAEQ%3B%3B%3BAAOZ%2CGAAC%3BCAEG%2C%2BCAAA%3BCACA%2CgCAAA%3BCACA%3BCACA%3BCACA%3BCACA%3B%3BAAkBR%3BCALI%3BEACI%22%7D */
 /* Include style: /mnt/data/dankert/Entwicklung/Projekte/openrat-cms/modules/cms/ui/themes/../../../template_engine/components/html/component_editor/editor */
 .editor__text-editor {
 	width: 100%;
