--- a/modules/cms/ui/themes/default/style/theme/openrat-theme.less
+++ b/modules/cms/ui/themes/default/style/theme/openrat-theme.less
@@ -176,7 +176,7 @@ html.or-theme-@{cms-theme-id} {
             }
 
 
-            &-navigation {
+            &-navigation-container {
                 //background-color: @cms-title-background-color;
                 //color: @cms-title-text-color;
                 background-color: @cms-background-color;
